# rust-todo-management-sample

./: Cargo.toml  docker-compose-local-db.yaml
migrations/: 20231128133949_init.sql
src/: main.rs
templates/: create_todo.html  index.html  todos.html
