[package]
name = "rust-ssr-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"]}
serde = { version = "1.0.193", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
